executable('simple', 'simple.c', dependencies: [binopt])
executable('manyparams', 'manyparams.c', dependencies: [binopt])
executable('fastexp', 'fastexp.c', dependencies: [binopt])
executable('memory', 'memory.c', dependencies: [binopt])
executable('polynom', 'polynom.c', dependencies: [binopt])
executable('indjmp', 'indjmp.c', dependencies: [binopt])
executable('call', 'call.c', dependencies: [binopt])
executable('indcall', 'indcall.c', dependencies: [binopt])
executable('alignment', 'alignment.c', dependencies: [binopt])
