executable('simple', 'simple.c', dependencies: [binopt])
executable('fastexp', 'fastexp.c', dependencies: [binopt])
executable('div', 'div.c', dependencies: [binopt])
executable('polynom', 'polynom.c', dependencies: [binopt])
executable('polynom2', 'polynom2.c', dependencies: [binopt])
executable('indcall', 'indcall.c', dependencies: [binopt])
executable('indcall-spec', 'indcall-spec.c', dependencies: [binopt])
